Fixed members not showing in popup.

--- a/src/components/Teams/Team.css
+++ b/src/components/Teams/Team.css
@@ -11,7 +11,8 @@ thead {
 }
 
 #teams__active {
-  width: 10px;
+  width: 50px;  /* Increase to provide space */
+  text-align: center;
 }
 
 .centered-cell {
@@ -126,8 +127,10 @@ tr.dark-mode:hover {
 }
 
 .usermanagement-actions-cell {
-  display: table-cell;
-  padding-left: 10px;
+  height: 35px; /* Set a proper height */
+  padding: 5px 10px;
+  font-size: 14px;
+  line-height: normal;
 }
 
 @media (max-width: 768px) {
@@ -139,5 +142,5 @@ tr.dark-mode:hover {
 }
 
 .overflow-container table {
-  min-width: 600px; 
+  min-width: 600px;
 }
